src/components/TaxPayments/TaxPaymentsTable/taxPaymentsTable.scss
.Layer__UI__Table__TaxPaymentsTable {
  width: 100%;
  table-layout: fixed;

  .Layer__UI__Table-Row,
  .Layer__UI__Table-TableHeader > tr {
    display: grid;
    grid-template-columns:
      minmax(8rem, 24%)
      repeat(4, minmax(6rem, 19%));
  }

  .Layer__UI__Table-Column__TaxPaymentsTable,
  .Layer__UI__Table-Cell__TaxPaymentsTable {
    &--RolledOverFromPrevious,
    &--CumulativeTaxesOwed,
    &--Estimated,
    &--Paid {
      justify-content: flex-end;
      text-align: right;
    }
  }

  .Layer__DataTable__EmptyState__Row {
    background-color: var(--color-base-0);
  }
}

